# nomadically.work

./: .env.example  .gitignore  APP_DOCUMENTATION.md  ARCHITECTURE_REPORT.md  CLAUDE.md  GOAL.md  INNGEST.md  OPTIMIZATION-STRATEGY.md  SKILLS-EXTENDED-ANALYSIS.md  SKILLS-INVENTORY.md  SKILLS-README.md  WORKSPACE_SKILLS_IMPLEMENTATION.md  auth.config.ts  codegen.ts  drizzle.config.ts  global.d.ts  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml  resume_implementation.md  test-live-workflow.ts  tsconfig.json  vercel.json  vitest.config.ts  wrangler.classify-jobs.toml  wrangler.d1-gateway.toml  wrangler.insert-jobs.toml  wrangler.promptfoo.toml  wrangler.toml
.claude/: settings.json
_bmad/: checklists.md
docs/: CLOUDFLARE_SETUP.md  CREATE_CLOUDFLARE_TOKEN.md  D1_SETUP.md  langchain-cloudflare-python-worker.md
hooks/: Cargo.toml  config.example.json
migrations/: 0000_gray_ares.sql  0001_eminent_excalibur.sql  0002_add_applications_table.sql  0007_add_company_golden_record_fields.sql  0009_add_ats_data_to_jobs.sql  0010_add_deep_planner_tasks.sql  0010_add_greenhouse_enhanced_fields.sql  0011_add_lever_fields.sql  0014_add_remotive_arbeitnow_sources.sql  0022_add_study_topics.sql
migrations.backup/: 0002_grey_roxanne_simpson.sql  0002_job_skills.sql  0003_add_remote_eu_classification.sql  0004_add_companies_table.sql  0005_add_user_preferences.sql  0006_add_evidence_bundles.sql  0008_add_company_evidence_tables.sql  0012_init_d1_schema.sql
research/: Cargo.toml
research-agent/: Cargo.toml
scripts/: brave-search.ts  bundle-deep-planner-context.ts  classify-remote-eu-jobs.ts  db-migrate-phase2.ts  delete-all-jobs.ts  discover-ashby-boards.ts  enforce-strategy.ts  enhance-all-jobs.ts  enhance-greenhouse-jobs.ts  enhance-specific-job.ts  eval-remote-eu-langfuse.ts  export-eval-data.ts  ingest-jobs.ts  (+18 more)
workers/deep-planner/: package-lock.json  package.json  pyproject.toml  wrangler.jsonc
workers/deep-planner/context/: claude-md.txt  db-schema.txt  schema-graphql.txt
workers/deep-planner/scripts/: setup_pyodide_deps.sh
workers/deep-planner/src/: checkpoint.py  context_data.py  durable_object.py  entry.py  helpers.py  llm.py  prompts.py
workers/process-jobs/: README.md  pyproject.toml  wrangler.jsonc
workers/process-jobs/src/: _generated_schema.py  entry.py
workers/process-jobs/tests/: conftest.py  test_classification.py
workers/resume-rag/: pyproject.toml
workers/resume-rag/src/: entry.py
(+581 files in other folders)
