[project]
name = "nomadically-work-deep-planner"
version = "0.1.0"
description = "Deep Planner: Autonomous BMAD workflow execution via Durable Objects"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "langchain-cloudflare",
    "langchain-core>=0.3.81,<2.0.0",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
