[project]
name = "nomadically-work-resume-rag"
version = "0.1.0"
description = "Cloudflare Python Worker for Resume RAG with Vectorize + LlamaParse"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    # NOTE: Do NOT include pydantic or langchain — they pull in pydantic_core
    # (a 4 MB WASM binary that pushes the worker over the 3 MiB size limit).
    # Use Pyodide's built-in modules and direct Workers AI binding calls instead.
]

[dependency-groups]
dev = ["workers-py", "workers-runtime-sdk"]

[tool.uv]
# Use Pyodide-compatible packages when available
index-url = "https://pypi.org/simple"
